Changes since version 1.2.0
---------------------------

- Added support for the Intel C++ compiler (v8.0) on Linux x86

- Removed the Ice.Daemon, Ice.DaemonNoChdir and Ice.DaemonNoClose
  properties. Support for Unix daemons and Win32 services has been
  integrated into the Ice::Service class.

- The default thread pool size is now just one thread. This is the
  fastest possible setting, still allows one level of nesting, and
  doesn't require that servants be thread safe. (Please see the
  description of the thread pool properties in the manual for
  information on how to increase the number of threads.)

- HP-UX port. See INSTALL.HP-UX.

- Added extra file integrity checks to IcePatch::Client.

- Fixed a problem with servers not shutting down properly under
  certain circumstances.

- IceUtil::Thread now calls srand() in each new thread (Windows only).

- When unmarshaling a string sequence parameter, Ice was not clearing
  the vector before appending elements to it. This has been fixed.
  
- Fixed a rare connection deadlock, that could happen if lots of long
  messages are sent rapidly in parallel, using separate threads or
  AMI.

- Fixed a race condition that could lead to a deadlock if a thread
  tried to join with another thread from within the destructor of a
  servant or class.

- Added support for IcePack and Glacier on Windows platforms.
  The IcePack Registry, IcePack Node and Glacier Starter programs
  can optionally be installed as Windows services. See the Ice
  manual for more information.

- Added a new logger implementation that uses the Windows Event Log.
  To use it, set the Ice.UseEventLog property to a non-zero value.

- Three new icepackadmin commands:

  * server signal NAME SIGNAL

    Causes the IcePackNode to send a signal to a server. (Unix only)

  * server stdout NAME MESSAGE

    Writes MESSAGE on server's stdout.

  * server stderr NAME MESSAGE

    Writes MESSAGE on server's stderr.

- Two new IcePack.Node properties:
